<resources>
    <string name="app_name">ClinicProjectV2</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_create_account">Create Account</string>
    <string name="title_clinic">Modify Clinic</string>
    <string name="title_clinic_hours">Modify Clinic Hours</string>
    <string name="title_rate_clinic">Rate Clinic</string>

    <string name="label_account_type">Account Type</string>
    <string name="label_additional_comments">Additional Comments</string>
    <string name="label_additional_comments_opt">Additional Comments (Optional)</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_clinic_info">Clinic Details</string>
    <string name="label_clinic_hours">Clinic Hours</string>
    <string name="label_clinic_name">Clinic Name</string>
    <string name="label_closed">Closed</string>
    <string name="label_create_account_instr">Please fill out the information below to register.</string>
    <string name="label_email">Email</string>
    <string name="label_employee">Employee</string>
    <string name="label_employee_info">Employee Info</string>
    <string name="label_first_name">First Name</string>
    <string name="label_insurance_types">Insurance Types</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_modify_hours">Modify Clinic Hours</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="label_patient">Patient</string>
    <string name="label_payment_methods">Payment Methods</string>
    <string name="label_phone">Phone</string>
    <string name="label_prompt_rating">What did you think of this clinic?</string>
    <string name="label_province">Province</string>
    <string name="label_rate_app">Rate this app</string>
    <string name="label_services">Services</string>
    <string name="label_street_name">Street Name</string>
    <string name="label_street_number">Street Number</string>
    <string name="label_username">Username</string>
    <string name="label_welcome_text">_WELCOME_TEXT_</string>
    <string name="label_welcome_text_2">Welcome to the uOttawa Clinics app. To use this service, create an account or login to an existing account.</string>

    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_login">Login</string>
    <string name="btn_save_changes">Save Changes</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="to">to</string>
    <string-array name="provinces">
        <item>AB</item>
        <item>BC</item>
        <item>NL</item>
        <item>MB</item>
        <item>NB</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>
</resources>
